Fix Vercel 404 error: Add root index.html and fix routing configuration

--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
       "use": "@vercel/python"
     },
     {
+      "src": "index.html",
+      "use": "@vercel/static"
+    },
+    {
       "src": "frontend/**/*",
       "use": "@vercel/static"
     }
@@ -16,12 +20,12 @@
       "dest": "api/index.py"
     },
     {
-      "src": "/(.*\\.(js|css|html|png|jpg|jpeg|gif|svg|ico))",
+      "src": "/frontend/(.*)",
       "dest": "frontend/$1"
     },
     {
-      "src": "/(.*)",
-      "dest": "frontend/index.html"
+      "src": "/",
+      "dest": "index.html"
     }
   ]
 }
