--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,12 @@
-Flask==2.3.3
-Flask-SQLAlchemy==3.0.5
-Flask-JWT-Extended==4.5.3
-Flask-CORS==4.0.0
-SQLAlchemy==2.0.23
-bcrypt==4.0.1
-python-dotenv==1.0.0
-requests==2.31.0
-openai==1.3.5
-anthropic==0.7.8
-chromadb==0.4.15
-numpy==1.24.3
-scikit-learn==1.3.2
-google-auth==2.23.4
-google-auth-oauthlib==1.1.0
+Flask>=3.0.0
+Flask-SQLAlchemy>=3.1.0
+Flask-JWT-Extended>=4.6.0
+Flask-CORS>=4.0.0
+SQLAlchemy>=2.0.0
+bcrypt>=4.1.0
+python-dotenv>=1.0.0
+requests>=2.31.0
+Werkzeug>=3.0.0
 google-api-python-client==2.108.0
 supabase==2.0.2
 psycopg2-binary==2.9.9
