--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,6 @@ google-api-python-client==2.108.0
 supabase==2.0.2
 psycopg2-binary==2.9.9
 gunicorn==21.2.0
+beautifulsoup4>=4.12.0
+openai>=1.3.0
+lxml>=4.9.0
