Add simplified serverless-compatible Flask app for Vercel
- Create simplified api/app.py with basic endpoints that work in serverless environment
- Remove database dependencies that cause issues in Vercel serverless functions
- Add hardcoded admin login for immediate testing (admin/admin123)
- Include health check, dashboard, and SEO API endpoints
- Update Vercel configuration to use new simplified app
- Provide fallback frontend with API testing links
- Enable immediate production testing without complex database initialization

--- a/vercel.json
+++ b/vercel.json
@@ -2,30 +2,31 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.py",
+      "src": "api/app.py",
       "use": "@vercel/python"
     },
     {
-      "src": "index.html",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "frontend/**/*",
+      "src": "frontend/**",
       "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "api/index.py"
+      "dest": "/api/app.py"
     },
     {
-      "src": "/frontend/(.*)",
-      "dest": "frontend/$1"
+      "src": "/(.*\\.(css|js|png|jpg|jpeg|gif|svg|ico))",
+      "dest": "/frontend/$1"
     },
     {
-      "src": "/",
-      "dest": "index.html"
+      "src": "/(.*)",
+      "dest": "/api/app.py"
     }
-  ]
+  ],
+  "functions": {
+    "api/app.py": {
+      "maxDuration": 30
+    }
+  }
 }
