--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/app.py",
+      "src": "api/index.py",
       "use": "@vercel/python"
     },
     {
@@ -13,7 +13,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/app.py"
+      "dest": "/api/index.py"
     },
     {
       "src": "/(.*\\.(css|js|png|jpg|jpeg|gif|svg|ico))",
@@ -21,11 +21,11 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/api/app.py"
+      "dest": "/api/index.py"
     }
   ],
   "functions": {
-    "api/app.py": {
+    "api/index.py": {
       "maxDuration": 30
     }
   }
